--- a/assets/scss/custom/components/_global.scss
+++ b/assets/scss/custom/components/_global.scss
@@ -29,3 +29,7 @@ ul, ol{
         transform : translateY(-15px)
     }
 }
+
+main {
+    padding-top: em(131);
+}
